--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a {
 
 /* .card-white{ name and follow me card } */
 .card-white {
-  background-color: #FCFFE7;
+  background-color: #FEF5ED;
   padding: 40px;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
   border-radius: 4px;
